@@ -1331,18 +1331,6 @@ QString QInputDialog::getItem(QWidget *parent, const QString &title, const QStri
 }
 
 /*!
-    \obsolete
-
-    Use getInt() instead.
-*/
-int QInputDialog::getInteger(QWidget *parent, const QString &title, const QString &label,
-                             int value, int min, int max, int step, bool *ok,
-                             Qt::WindowFlags flags)
-{
-    return getInt(parent, title, label, value, min, max, step, ok, flags);
-}
-
-/*!
     \fn QString QInputDialog::getText(const QString &title, const QString &label,
                                       QLineEdit::EchoMode echo = QLineEdit::Normal,
                                       const QString &text = QString(), bool *ok = 0,
@@ -1350,19 +1338,6 @@ int QInputDialog::getInteger(QWidget *parent, const QString &title, const QStrin
 
     Call getText(\a parent, \a title, \a label, \a echo, \a text, \a
     ok, \a flags) instead.
-
-    The \a name parameter is ignored.
-*/
-
-/*!
-    \fn int QInputDialog::getInteger(const QString &title, const QString &label, int value = 0,
-                                     int min = -2147483647, int max = 2147483647,
-                                     int step = 1, bool *ok = 0,
-                                     QWidget *parent = 0, const char *name = 0, Qt::WindowFlags flags = 0)
-
-
-    Call getInteger(\a parent, \a title, \a label, \a value, \a
-    min, \a max, \a step, \a ok, \a flags) instead.
 
     The \a name parameter is ignored.
 */
